force-app/main/default/objects/Lab_Order__c/fields/Accession_ID__c.field-meta.xml
<CustomField>
    <fullName>Accession_ID__c</fullName>
    <label>Accession ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>