force-app/main/default/objects/Lab_Order__c/fields/Appointment_Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Confirmation_Code__c</fullName>
    <label>Appointment Confirmation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>