force-app/main/default/objects/Lab_Order__c/fields/Cancellation_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Service_Fee__c</fullName>
    <label>Cancellation Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>