force-app/main/default/objects/Lab_Order__c/fields/Captured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Captured_Amount__c</fullName>
    <label>Captured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>