force-app/main/default/objects/Lab_Order__c/fields/Check_For_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Check_For_Order_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check For Order Summary</label>
    <type>Checkbox</type>
</CustomField>