force-app/main/default/objects/Lab_Order__c/fields/Check_for_Results__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Results__c</fullName>
    <label>Check for Results</label>
    <summaryFilterItems>
        <field>Lab_Order_Panel__c.Check_for_Results__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Order_Panel__c.Lab_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>