force-app/main/default/objects/Lab_Order__c/fields/Consent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date_Time__c</fullName>
    <label>Consent Date/Time</label>
    <type>DateTime</type>
</CustomField>