force-app/main/default/objects/Lab_Order__c/fields/Consent_Minor_TnC_Version__c.field-meta.xml
<CustomField>
    <fullName>Consent_Minor_TnC_Version__c</fullName>
    <label>Consent for Minor TnC Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>