force-app/main/default/objects/Lab_Order__c/fields/CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt__c</fullName>
    <label>CreatedAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>