force-app/main/default/objects/Lab_Order__c/fields/Customer_ID_Override__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Override__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Customer_ID_Override</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>