force-app/main/default/objects/Lab_Order__c/fields/Days_past_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Days_past_Confirm__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days past Confirm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>