force-app/main/default/objects/Lab_Order__c/fields/Days_to_expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_expire__c</fullName>
    <formula>IF(AND(FO_Record_Type__c = &apos;InPerson&apos;,
ISPICKVAL(Status__c, &apos;PA Approved&apos;)
),
PWN_Status_Date__c +65 - TODAY(),9999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>