force-app/main/default/objects/Lab_Order__c/fields/Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Codes__c</fullName>
    <label>Diagnosis Codes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>