force-app/main/default/objects/Lab_Order__c/fields/Eligible_To_Expire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_To_Expire__c</fullName>
    <formula>IF(AND(
ISPICKVAL(Status__c, &apos;PA Approved&apos;),
TODAY() &gt;
PWN_Status_Date__c + 65
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible To Expire</label>
    <type>Checkbox</type>
</CustomField>