force-app/main/default/objects/Lab_Order__c/fields/EOST_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>EOST_Status_Code__c</fullName>
    <label>EOST Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>