force-app/main/default/objects/Lab_Order__c/fields/ExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>ExpiresAt__c</fullName>
    <label>ExpiresAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>