force-app/main/default/objects/Lab_Order__c/fields/External_Partner_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Partner_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Partner Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>