force-app/main/default/objects/Lab_Order__c/fields/FHIR_External_ID__c.field-meta.xml
<CustomField>
    <fullName>FHIR_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>FHIR External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>