force-app/main/default/objects/Lab_Order__c/fields/FHIR_Id__c.field-meta.xml
<CustomField>
    <fullName>FHIR_Id__c</fullName>
    <externalId>true</externalId>
    <label>FHIR_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>