force-app/main/default/objects/Lab_Order__c/fields/FO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FO_Record_Type__c</fullName>
    <formula>IF( Is_Kit__c , Kit_Detail__r.Type__c , &apos;InPerson&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FO Record Type</label>
    <type>Text</type>
</CustomField>