force-app/main/default/objects/Lab_Order__c/fields/Fulfillment_Order__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>