force-app/main/default/objects/Lab_Order__c/fields/Full_Refund__c.field-meta.xml
<CustomField>
    <fullName>Full_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Refund</label>
    <type>Checkbox</type>
</CustomField>