force-app/main/default/objects/Lab_Order__c/fields/Is_Commerce_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Commerce_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Commerce Flow</label>
    <type>Checkbox</type>
</CustomField>