force-app/main/default/objects/Lab_Order__c/fields/Is_GSS_Case_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_GSS_Case_Eligible__c</fullName>
    <formula>AND( Is_Kit__c , Kit_Detail__r.Type__c = &apos;GSS&apos;, TEXT(Status__c)= &apos;PA Acknowledged&apos;, DATEVALUE(LastModifiedDate ) = TODAY() - 2)</formula>
    <label>Is GSS Case Eligible</label>
    <type>Checkbox</type>
</CustomField>