force-app/main/default/objects/Lab_Order__c/fields/Is_Kit__c.field-meta.xml
<CustomField>
    <fullName>Is_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kit</label>
    <type>Checkbox</type>
</CustomField>