force-app/main/default/objects/Lab_Order__c/fields/Is_Leagcy__c.field-meta.xml
<CustomField>
    <fullName>Is_Leagcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Leagcy</label>
    <type>Checkbox</type>
</CustomField>