force-app/main/default/objects/Lab_Order__c/fields/Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner</label>
    <type>Checkbox</type>
</CustomField>