force-app/main/default/objects/Lab_Order__c/fields/Is_PWN_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_PWN_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PA Approved</label>
    <type>Checkbox</type>
</CustomField>