force-app/main/default/objects/Lab_Order__c/fields/Is_Refund_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Refund_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refund Error</label>
    <type>Checkbox</type>
</CustomField>