force-app/main/default/objects/Lab_Order__c/fields/Kit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Kit_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Detail</label>
    <referenceTo>Kit_Details__c</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>