force-app/main/default/objects/Lab_Order__c/fields/Lab_Order_ID_Uppercase__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_ID_Uppercase__c</fullName>
    <formula>UPPER(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Order ID Uppercase</label>
    <type>Text</type>
</CustomField>