force-app/main/default/objects/Lab_Order__c/fields/Lab_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Notes__c</fullName>
    <label>Lab Order Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>