force-app/main/default/objects/Lab_Order__c/fields/LabRefId__c.field-meta.xml
<CustomField>
    <fullName>LabRefId__c</fullName>
    <formula>BLANKVALUE(LabRefId_Override__c, &apos;SF000000000000&apos;+CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LabRefId</label>
    <type>Text</type>
</CustomField>