force-app/main/default/objects/Lab_Order__c/fields/LabRefId_Override__c.field-meta.xml
<CustomField>
    <fullName>LabRefId_Override__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LabRefId_Override</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>