force-app/main/default/objects/Lab_Order__c/fields/LO_Panel_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>LO_Panel_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A nightly job runs looking for LOs with &quot;LO Panels Require Case&quot; checked. Once the case has been created for that LO, this box gets checked, suppressing the LO from having another case auto-created in future runs.</description>
    <label>LO Panel Case Created</label>
    <type>Checkbox</type>
</CustomField>