force-app/main/default/objects/Lab_Order__c/fields/LO_Panels_Require_Case__c.field-meta.xml
<CustomField>
    <fullName>LO_Panels_Require_Case__c</fullName>
    <description>If total LO Panels are &gt;1, but total LO Panels registered is 1, this is a sign that the lingering registered panel requires some sort of intervention. This formula field helps to flag these LOs for the NCS team &amp; is used in a nightly case creation flow.</description>
    <formula>AND( 
 Total_Panels__c &gt; 1,
 Total_Registered_Panels__c = 1,
 Date_of_Collection__c+2 &lt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LO Panels Require Case</label>
    <type>Checkbox</type>
</CustomField>