force-app/main/default/objects/Lab_Order__c/fields/Minor_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Minor_Address_Line_2__c</fullName>
    <label>Minor Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>