force-app/main/default/objects/Lab_Order__c/fields/Minor_City__c.field-meta.xml
<CustomField>
    <fullName>Minor_City__c</fullName>
    <label>Minor City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>