force-app/main/default/objects/Lab_Order__c/fields/Minor_Country__c.field-meta.xml
<CustomField>
    <fullName>Minor_Country__c</fullName>
    <label>Minor Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>