force-app/main/default/objects/Lab_Order__c/fields/Minor_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Minor_Customer_Id__c</fullName>
    <description>Customer ID to HUB when the order is a minor order</description>
    <displayFormat>A0YMINPID{000000000}</displayFormat>
    <label>Minor Customer Id</label>
    <type>AutoNumber</type>
</CustomField>