force-app/main/default/objects/Lab_Order__c/fields/Minor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Minor_Date_of_Birth__c</fullName>
    <label>Minor Date of Birth</label>
    <type>Date</type>
</CustomField>