force-app/main/default/objects/Lab_Order__c/fields/Minor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Minor_Last_Name__c</fullName>
    <label>Minor Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>