force-app/main/default/objects/Lab_Order__c/fields/Minor_Record__c.field-meta.xml
<CustomField>
    <fullName>Minor_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minor Record</label>
    <referenceTo>Person_Record__c</referenceTo>
    <relationshipLabel>Lab Orders (Minor Record)</relationshipLabel>
    <relationshipName>Lab_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>