force-app/main/default/objects/Lab_Order__c/fields/Minor_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Minor_Zip_Code__c</fullName>
    <label>Minor Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>