force-app/main/default/objects/Lab_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>