force-app/main/default/objects/Lab_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &apos;Cancelled&apos;),
    &apos;Cancelled&apos;,
    IF(
        ISPICKVAL(Status__c, &apos;PA Rejected&apos;),
        &apos;PA Rejected&apos;,
        IF(
            Is_Expired__c,
            &apos;Expired&apos;,
            IF(
                AND(
                    Total_TNP_Panels__c = 0,
                    Total_Resulted_Panels__c = 0,
                    Total_In_Progress__c = 0,
                    Total_Partial_Resulted_Panels__c =0,
                    !PWN_Success__c
                ),
                &apos;Registered&apos;,
                IF(
                    AND(
                        Total_TNP_Panels__c = 0,
                        Total_Resulted_Panels__c = 0,
                        Total_In_Progress__c = 0,
                        Total_Partial_Resulted_Panels__c =0,
                        PWN_Success__c,
                        !Is_PWN_Approved__c
                    ),
                    &apos;PA Acknowledged&apos;,
                    IF(
                        AND(
                            Total_TNP_Panels__c = 0,
                            Total_Resulted_Panels__c = 0,
                            Total_In_Progress__c = 0,
                            Total_Partial_Resulted_Panels__c =0,
                            Is_PWN_Approved__c
                        ),
                        &apos;PA Approved&apos;,
                        IF(
                            Total_Panels__c = Total_Resulted_Panels__c,
                            &apos;Results Ready&apos;,
                            IF(
                                Total_Panels__c = Total_TNP_Panels__c,
                                &apos;Results Ready&apos;,
                                IF(
                                    AND(
                                        Total_In_Progress__c = 0,
                                        Total_Partial_Resulted_Panels__c =0,
                                        Total_TNP_Panels__c &gt; 0,
                                        Total_Panels__c &lt;&gt; Total_Resulted_Panels__c,
                                        Total_Resulted_Panels__c &gt; 0
                                    ),
                                    &apos;Results Ready&apos;,
                                    IF(
                                        AND(
                                            OR(
                                                Total_Resulted_Panels__c &gt; 0,
                                                Total_TNP_Panels__c &gt; 0,
                                                Total_Partial_Resulted_Panels__c &gt; 0
                                            ),
                                            Total_In_Progress__c &gt;= 0
                                        ),
                                        &apos;Partial Results Ready&apos;,
                                        &apos;In Progress&apos;
                                    )
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>