force-app/main/default/objects/Lab_Order__c/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>