force-app/main/default/objects/Lab_Order__c/fields/Partner_Client_Map__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Client Map</label>
    <referenceTo>PartnerClientMap__c</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>