force-app/main/default/objects/Lab_Order__c/fields/Partner_Dashboard_Effective_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Dashboard_Effective_Created_Date__c</fullName>
    <description>Formula datetime used by the partner dashboard to fall back to CreatedDate when no seed datetime is provided.</description>
    <formula>IF(
  ISBLANK(Partner_Dashboard_Seed_Created_Date__c),
  CreatedDate,
  Partner_Dashboard_Seed_Created_Date__c
)</formula>
    <inlineHelpText>Formula datetime used by the partner dashboard to fall back to CreatedDate when no seed datetime is provided.</inlineHelpText>
    <label>Partner Dashboard Effective Created Date</label>
    <type>DateTime</type>
</CustomField>