force-app/main/default/objects/Lab_Order__c/fields/Partner_Dashboard_Seed_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Dashboard_Seed_Created_Date__c</fullName>
    <description>Temporary seed-only datetime used to preserve dashboard ageing and date window behavior in non-production orgs.</description>
    <inlineHelpText>Temporary seed-only datetime used to preserve dashboard ageing and date window behavior in non-production orgs.</inlineHelpText>
    <label>Partner Dashboard Seed Created Date</label>
    <type>DateTime</type>
</CustomField>