force-app/main/default/objects/Lab_Order__c/fields/Partner_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order_Total__c</fullName>
    <label>Partner Order Total</label>
    <summarizedField>Lab_Order_Panel__c.Panel_Price__c</summarizedField>
    <summaryForeignKey>Lab_Order_Panel__c.Lab_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>