force-app/main/default/objects/Lab_Order__c/fields/Payment_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Transaction Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>