force-app/main/default/objects/Lab_Order__c/fields/PerformingSite__c.field-meta.xml
<CustomField>
    <fullName>PerformingSite__c</fullName>
    <label>PerformingSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>