force-app/main/default/objects/Lab_Order__c/fields/Person_Record__c.field-meta.xml
<CustomField>
    <fullName>Person_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Record</label>
    <referenceTo>Person_Record__c</referenceTo>
    <relationshipLabel>Lab Orders</relationshipLabel>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>