force-app/main/default/objects/Lab_Order__c/fields/Physician_Npi__c.field-meta.xml
<CustomField>
    <fullName>Physician_Npi__c</fullName>
    <label>Physician Npi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>