force-app/main/default/objects/Lab_Order__c/fields/Physician_Upin__c.field-meta.xml
<CustomField>
    <fullName>Physician_Upin__c</fullName>
    <label>Physician Upin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>