force-app/main/default/objects/Lab_Order__c/fields/Pre_Shop_Rocket__c.field-meta.xml
<CustomField>
    <fullName>Pre_Shop_Rocket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Shop Rocket</label>
    <type>Checkbox</type>
</CustomField>