force-app/main/default/objects/Lab_Order__c/fields/Prescriptive_Authority__c.field-meta.xml
<CustomField>
    <fullName>Prescriptive_Authority__c</fullName>
    <description>Used to determine the prescriptive authority on Partner Lab Orders</description>
    <label>Prescriptive Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>