force-app/main/default/objects/Lab_Order__c/fields/Publish_Results__c.field-meta.xml
<CustomField>
    <fullName>Publish_Results__c</fullName>
    <formula>Total_Panels__c ==  Check_for_Results__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish Results</label>
    <type>Checkbox</type>
</CustomField>