force-app/main/default/objects/Lab_Order__c/fields/Purchaser_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Email__c</fullName>
    <formula>Order_Summary__r.OriginalOrder.Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Email</label>
    <type>Text</type>
</CustomField>