force-app/main/default/objects/Lab_Order__c/fields/Purchaser_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Name__c</fullName>
    <formula>Order_Summary__r.OriginalOrder.Account.FirstName &amp;&quot; &quot;&amp; Order_Summary__r.OriginalOrder.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Name</label>
    <type>Text</type>
</CustomField>