force-app/main/default/objects/Lab_Order__c/fields/Purchaser_Registrant__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Registrant__c</fullName>
    <description>Purchaser Email = Registrant Email</description>
    <formula>Purchaser_Email__c =  Registrant_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser = Registrant</label>
    <type>Checkbox</type>
</CustomField>