force-app/main/default/objects/Lab_Order__c/fields/PWN_ID__c.field-meta.xml
<CustomField>
    <fullName>PWN_ID__c</fullName>
    <externalId>true</externalId>
    <label>PA External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>