force-app/main/default/objects/Lab_Order__c/fields/Refund_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Refund_Attempts__c</fullName>
    <label>Refund Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>