force-app/main/default/objects/Lab_Order__c/fields/Registrant_Email__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Email__c</fullName>
    <formula>Person_Record__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Email</label>
    <type>Text</type>
</CustomField>