force-app/main/default/objects/Lab_Order__c/fields/Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Name__c</fullName>
    <description>Allows NCS team to see registrant info on the LO.</description>
    <formula>Person_Record__r.First_Name__c &amp;&quot; &quot;&amp; Person_Record__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant Name</label>
    <type>Text</type>
</CustomField>