force-app/main/default/objects/Lab_Order__c/fields/Send_Approved_Orders_To_GPP__c.field-meta.xml
<CustomField>
    <fullName>Send_Approved_Orders_To_GPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Approved Orders To GPP</label>
    <type>Checkbox</type>
</CustomField>