force-app/main/default/objects/Lab_Order__c/fields/Send_Details_to_Genetics_Portal_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Send_Details_to_Genetics_Portal_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Details to Genetics Portal Proxy</label>
    <type>Checkbox</type>
</CustomField>