force-app/main/default/objects/Lab_Order__c/fields/sh_app_secret__c.field-meta.xml
<CustomField>
    <fullName>sh_app_secret__c</fullName>
    <label>sh app secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>